App calendar #585: changed from fixed to absolute the header and date selector on calendar to fix the problems on iOS with scroll. Changed how its buttons take space to have more clickable area

--- a/prototypes/app/source/css/activities/calendar.styl
+++ b/prototypes/app/source/css/activities/calendar.styl
@@ -18,7 +18,8 @@
         $padTop = 14px;
         $padBottom = 8px;
         
-        position: fixed;
+        // absolute vs fixed because the iOS problem with scrolling
+        position: absolute;
         z-index: 100;
         background: White;
 
@@ -55,8 +56,8 @@
 
         /* Button link */
         > a.btn {
-            margin: $padTop 0 $padBottom 0;
-            padding: 0;
+            padding: $padTop 0 $padBottom 0;
+            margin: 0;
             font-size: 20px;
             color: $gray-dark;
             border: none;
@@ -73,11 +74,12 @@
 
     #calendarDatePicker {
         /* positioning */
-        position: fixed;
+        // absolute vs fixed because the iOS problem with scrolling
+        position: absolute;
         left: 10px;
         right: 10px;
         z-index: 100;
-        top: $titleInnerHeight + $app-navbar-height;
+        top: $titleInnerHeight;
         // Set limits to avoid innusable full-width sizes:
         min-width: 250px;
         max-width: 500px;
